--- a/NA-WebApp-DevelopersTeam/src/main/webapp/jsp/nav.jspf
+++ b/NA-WebApp-DevelopersTeam/src/main/webapp/jsp/nav.jspf
@@ -7,7 +7,13 @@
     <c:param name="command" value="logout" />
 </c:url>
 
-<header>
-    <a href="${home}">Back to Home</a>
-    <a href="${logout}">Log out</a>
-</header>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="${home}">Home</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="${logout}">Log out</a></li>
+        </ul>
+    </div>
+</nav>
