--- a/AV-WebApp-Clinic/src/main/webapp/assets/css/page_style.css
+++ b/AV-WebApp-Clinic/src/main/webapp/assets/css/page_style.css
@@ -7,12 +7,7 @@ body {
 }
 .container {
     width: 90%;
-    margin: 0;
-}
-
-.footer {
-    margin-bottom: 10%;
-    padding: 10px 0;
+    margin: 0 auto;
 }
 
 a:link {
