--- a/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/views/error/forbidden-error.html
+++ b/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/views/error/forbidden-error.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>500 Internal server error</title>
+    <title>403 Forbidden</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -9,9 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <h2>Internal server error has occurred</h2>
-        <p>If you are reading this, then something unexpected has happened. Be sure
-            that we are doing our best to find out why you see this.</p>
+        <h2>You Shall Not Pass</h2>
+        <p>Sorry, but you can't see this page due to security reasons. This may
+            happen because your session has expired, or you don't have enough
+            permissions to view this page.</p>
     </div>
 </body>
 </html>
