Minor cosmetical changes

--- a/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/views/error/forbidden-error.html
+++ b/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/views/error/forbidden-error.html
@@ -14,6 +14,7 @@
         <p>Sorry, but you can't see this page due to security reasons. This may
             happen because your session has expired, or you don't have enough
             permissions to view this page.</p>
+        <a href="/home">Back to home page</a>
     </div>
 </body>
 </html>
