--- a/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/views/error/internal-error.html
+++ b/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/views/error/internal-error.html
@@ -12,6 +12,7 @@
         <h2>Internal server error has occurred</h2>
         <p>If you are reading this, then something unexpected has happened. Be sure
             that we are doing our best to find out why you see this.</p>
+        <a href="/home">Back to home page</a>
     </div>
 </body>
 </html>
