--- a/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/views/error/not-found-error.html
+++ b/NA-WebApp-DevelopersTeam-Spring/src/main/webapp/WEB-INF/views/error/not-found-error.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>404 Not Found</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <h2>Page was not found</h2>
-    <p>Page you are looking for does not exist. If you didn't do anything
-        unusual like manual typing url or changing page source, then it's
-        developer's fault. You'd better punish him as follows</p>
+    <div class="container">
+        <h2>Page was not found</h2>
+        <p>Page you are looking for does not exist. If you didn't do anything
+            unusual like manual typing url or changing page source, then it's
+            developer's fault. You'd better punish him as follows</p>
+        <a href="/home">Back to home page</a>
+    </div>
 </body>
 </html>
